--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script type="text/javascript" >
+      window.logo = "<%= image_url('patrickflix-logo.png') %>"
+      window.big = "<%= image_url('logo-big.png') %>"
+      window.icon = "<%= image_url('icon.png') %>"
+    </script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
 
   <body>
