add player container

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -127,3 +127,9 @@
     flex-direction: row;
     justify-content: space-around;
 }
+
+.video-player {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
