--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -132,4 +132,11 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
 }
+
+.back-to-browse {
+    display: flex;
+    flex-direction: row;
+}
+
