functional aws attachment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PatrickFlix</title>
+    <title>PatrickFlix - Watch the hottest, Patrick exclusive movies and tv</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +11,8 @@
       window.logo = "<%= image_url('patrickflix-logo.png') %>"
       window.big = "<%= image_url('logo-big.png') %>"
       window.icon = "<%= image_url('icon.png') %>"
+      window.back_arrow = "<%= image_url('back_arrow.png') %>"
+      window.forward_arrow = "<%= image_url('forward_arrow.png') %>"
     </script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
