--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -133,6 +133,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: red;
 }
 
 .back-to-browse {
@@ -140,3 +141,40 @@
     flex-direction: row;
 }
 
+
+
+.forward-button {
+    height: 36px;
+    margin-right: 34px;
+    cursor: pointer;
+}
+
+.reverse-button {
+    height: 36px;
+    margin-right: 32px;
+    cursor: pointer;
+}
+
+.fa-compress {
+    color: white;
+    font-size: 31px;
+    margin-right: 4px;
+    transition: color 300ms;
+    cursor: pointer;
+}
+
+.movie-title {
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: 500;
+}
+
+.bottom-row {
+    width: 96%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
