--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -3,6 +3,7 @@
     height: 100%;
 }
 
+
 .videos-index-header {
     height: 67px;
     display: flex;
@@ -96,6 +97,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 33%;
 }
 
 .patrick-stewart-div ul {
@@ -108,6 +110,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 33%;
 }
 
 .patrick-swayze-div ul {
@@ -120,6 +123,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 33%;
 }
 
 .neil-patrick-harris-div ul {
@@ -177,4 +181,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.video-element {
+    height: 200px;
+    width: 25%;
 }
