--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -132,7 +132,7 @@
 //     justify-content: space-around;
 // }
 
-.video-player {
+.video-player-div {
     width: 100%;
     height: 100%;
     display: flex;
