--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -137,7 +137,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: red;
+    // background-color: red;
    
 }
 
@@ -197,6 +197,7 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
+    opacity: "0";
 }
 
 // .video-element {
