--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
       window.icon = "<%= image_url('icon.png') %>"
       window.back_arrow = "<%= image_url('back_arrow.png') %>"
       window.forward_arrow = "<%= image_url('forward_arrow.png') %>"
+      src="jquery-3.5.1.min.js"
     </script>
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
 
