--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -100,7 +100,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 100%;
+    height: 80%;
+}
+.detail-row {
+    height: 20%;
+    display: flex;
+    width: 80%;
+    margin-bottom: 25px;
 }
 
 // .patrick-stewart-div ul {
@@ -113,7 +119,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 100%;
+    height: 80%;
 }
 
 // .patrick-swayze-div ul {
@@ -126,7 +132,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 100%;
+    height: 80%;
 }
 
 // .neil-patrick-harris-div ul {
@@ -274,15 +280,17 @@
     overflow: hidden;
 }
 
-.close {
-    width: 0;
-    height: 0;
-    display: none;
-}
+// .close {
+//     width: 80%;
+//     height: 150px;
+//     display: none;
+    // opacity: 0
+// }
 
-.open {
-    width: 80%;
-    height: 150px;
-    display: flex;
-    flex-direction: row;
-}
+// .open {
+//     width: 80%;
+//     height: 150px;
+//     display: flex;
+//     flex-direction: row;
+//     opacity: 1;
+// }
