--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -291,3 +291,10 @@
     justify-content: center;
     height: 80%;
 }
+
+.featured-video {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 300px;
+}
