--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -199,7 +199,8 @@
 // }
 
 .index-item{
-    height: 400px;
+    // height: 400px;
+    height: 100%;
     width: 30%;
     list-style: none;
 }
@@ -213,10 +214,11 @@
 }
 
 .videos-index-body{
-    height: 100%;
+    height: 500vh;
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #141414;
 }
 
 #video-player{
@@ -228,7 +230,7 @@
     display: flex;
     flex-direction: column;
     width: 95%;
-    height: 400px;
+    height: 500px;
     margin-top: 15px;
     margin-bottom: 15px;
     // margin-left: 3%;
@@ -265,20 +267,7 @@
     overflow: hidden;
 }
 
-// .close {
-//     width: 80%;
-//     height: 150px;
-//     display: none;
-    // opacity: 0
-// }
 
-// .open {
-//     width: 80%;
-//     height: 150px;
-//     display: flex;
-//     flex-direction: row;
-//     opacity: 1;
-// }
 
 .video-row-inner {
     display: flex;
@@ -289,12 +278,45 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 80%;
+    height: 70%;
 }
 
-.featured-video {
+.featured-video-div {
     display: flex;
     flex-direction: column;
-    width: 90%;
-    height: 300px;
+    width: 100vw;
+    height: 90vh;
+    margin-top: 15px;
+    
+}
+
+#featured-video{
+    width: 100vw;
+  
+}
+
+.featured-video-h1 {
+    color: white;
+    font-weight: 700;
+    font-size: 48px;
+}
+
+.featured-video-h3 {
+    color: white;
+    font-weight: 200;
+    font-size: 24px;
+}
+
+.featured-video-title-div {
+    top:35vh;
+    z-index: 3;
+    position: absolute;
+    left: 25vw;
+}
+
+.featured-mute-div {
+    top:30vh;
+    z-index: 3;
+    position: absolute;
+    right: 15vw;
 }
