add/remove text

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -87,3 +87,16 @@
     border-radius: 50%;
     opacity: 0;
 }
+
+.add-remove-div{
+    color: white;
+    background-color: black;
+    width: 75px;
+    height: 24px;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5%;
+    margin-top: 5%;
+}
