--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -447,7 +447,7 @@
     width: 0;
 }
 .detail-row-show h3 {
-    width: 25%;
+    
     overflow: scroll;
     margin-left: 20px;
 }
@@ -479,4 +479,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#play-button-detail{
+    color: white;
+    
 }
