style and linkability on index item

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -97,6 +97,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 5%;
+    margin-left: 35px;
     margin-top: 5%;
+    position: absolute;
+
 }
