--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -229,7 +229,7 @@
 .index-item img {
     height: 150px;
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .videos-index-body{
@@ -249,7 +249,7 @@
     display: flex;
     flex-direction: column;
     width: 95%;
-    height: 500px;
+    // height: 500px;
     margin-top: 15px;
     margin-bottom: 25px;
     // margin-left: 3%;
@@ -484,6 +484,7 @@
     align-items: center;
     justify-content: center;
     position: absolute;
+    margin-left: 10px;
 }
 
 #play-button-detail{
