--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     width: 450px;
     height: 350px;
+    margin-bottom: 20px;
 }
 
 #list-li img{
@@ -39,6 +40,8 @@
     background-color: #141414;
     display: flex;
     flex-direction: column;
+    padding-left: 20px;
+    padding-top: 15px;
 }
 
 .videos-index-header-left a {
@@ -101,4 +104,11 @@
     margin-top: 5%;
     position: absolute;
 
+}
+
+.list-h1{
+    color: white;
+    font-weight: 700;
+    font-size: 48px;
+    margin-bottom: 20px;
 }
