remove debugger for heroku

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -178,6 +178,10 @@ h1, h2, h3, h4, h5, h6, a, div {
     cursor: pointer;
 }
 
+#search-input{
+    margin-left: 20px;
+}
+
 .reverse-button {
     height: 36px;
     margin-right: 32px;
