better splash buttons

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -68,7 +68,7 @@ html{
 .splash-head-right nav {
     margin-top: 30px;
     background-color: #e50914;
-    width: 85px;
+    width: 10px;
     height: 30px;
     display: flex;
     justify-content: center;
@@ -142,7 +142,7 @@ html{
 .splash-body a {
     font-size: 30px;
     font-weight: 400;
-    letter-spacing: 1.9px;
+    // letter-spacing: 1.9px;
     border-radius: 2px;
     color: #fff;
     text-decoration: none;
