--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -304,6 +304,10 @@ h1, h2, h3, h4, h5, h6, a, div {
     color: white;
     position: absolute;
     cursor: pointer;
+    display: none;
+    margin-top: 130px;
+    margin-left: 45%;
+    
     
 }
 
@@ -328,6 +332,8 @@ h1, h2, h3, h4, h5, h6, a, div {
     flex-direction: row;
     justify-content: center;
     height: 200px;
+    width: 80%;
+ 
     // overflow-x: scroll;
 }
 
