--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -29,7 +29,7 @@ html{
     flex-direction: row;
     width: 100%;
     height: 100px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .splash-head-right {
@@ -164,6 +164,20 @@ html{
     cursor: pointer;
     
 }
+
+.splash-body button {
+    width: 450px;
+    height: 90px;
+    background-color: #e50914;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 15px;
+}
+
 
 .top-row {
     display: flex;
