--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -488,11 +488,15 @@ h1, h2, h3, h4, h5, h6, a, div {
 
 #search-li{
     list-style: none;
+    
 }
 
 #search-li a{
     color: black;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .detail-row-show{
