--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -599,3 +599,24 @@ h1, h2, h3, h4, h5, h6, a, div {
 .right-arrow-div {
     right: 0
 }
+
+.links-index-div{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 100px;
+}    
+
+.links-index-div ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.links-index-div a {
+    color: white;
+}
